[package]
name = "api-rest"
version = "0.1.0"
authors = ["victorK8 <victormalum@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
serde = "1.0.114"
simple_logger = "1.6.0"
log = "0.4.8"
pam = "0.7.0"